--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -33,5 +33,5 @@ jobs:
         run: npm run build
       - name: Deploy
         env:
-          PAGESHIP_API: https://api.pages.pandawork.com
+          PAGESHIP_API: https://api.pages.oursky.app
         run: make deploy
