--- a/pageship.production.toml
+++ b/pageship.production.toml
@@ -2,6 +2,8 @@
 id = "mockuphone-prod"
 
 team = [
+    { githubuser="rickmak", access="deployer" },
+    { githubuser="pkong-ds", access="deployer" },
     # Allow GitHub Actions in your repo to deploy
     { gitHubRepositoryActions="oursky/mockuphone.com", access="deployer" },
     { gitHubRepositoryActions="pkong-ds/mockuphone.com", access="deployer" }
