--- a/pageship.staging.toml
+++ b/pageship.staging.toml
@@ -2,8 +2,9 @@
 id = "mockuphone-staging"
 
 team = [
-    { githubUser="rickmak", access="deployer" },
-    { githubuser="pkong-ds", access="deployer" },
+    { githubUser="rickmak", access="admin" },
+    { githubuser="chankiyu22", access="admin" },
+    { githubuser="pkong-ds", access="admin" },
     # Allow GitHub Actions in your repo to deploy
     { gitHubRepositoryActions="oursky/mockuphone.com", access="deployer" },
     { gitHubRepositoryActions="pkong-ds/mockuphone.com", access="deployer" }
