--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/image": "^0.17.2",
     "@astrojs/ts-plugin": "^1.1.1",
     "astro": "^2.8.3",
+    "image-size": "^1.1.1",
     "localforage": "^1.10.0",
     "zod": "^3.21.4"
   },
