Let CD depends on CI

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,14 +1,7 @@
 name: CD
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
-  cancel-in-progress: true
-
 on:
-  push:
-    branches:
-      - main
-      - production
+  workflow_call:
 
 jobs:
   cd:
