--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^2.8.3",
     "create-stylelint": "^0.5.0",
     "image-size": "^1.1.1",
+    "jszip": "^3.10.1",
     "localforage": "^1.10.0",
     "zod": "^3.21.4"
   },
