--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/image": "^0.17.2",
     "@astrojs/ts-plugin": "^1.1.1",
     "astro": "^2.8.3",
+    "create-stylelint": "^0.5.0",
     "image-size": "^1.1.1",
     "localforage": "^1.10.0",
     "zod": "^3.21.4"
@@ -29,7 +30,11 @@
     "eslint": "^8.46.0",
     "eslint-plugin-astro": "^0.27.2",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "postcss-html": "^1.7.0",
     "prettier": "^3.0.1",
-    "prettier-plugin-astro": "^0.11.0"
+    "prettier-plugin-astro": "^0.11.0",
+    "stylelint": "^16.8.2",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-standard": "^36.0.1"
   }
 }
