--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "image-size": "^1.1.1",
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
+    "toastify-js": "1.12.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20.4.5",
+    "@types/toastify-js": "1.12.3",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "eslint": "^8.46.0",
