--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
     "toastify-js": "1.12.0",
+    "ulid": "2.3.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
