Use exact version for all dependencies

--- a/package.json
+++ b/package.json
@@ -13,35 +13,35 @@
     "check": "astro check -- && tsc --noEmit"
   },
   "dependencies": {
-    "@algolia/autocomplete-js": "^1.17.4",
-    "@algolia/autocomplete-plugin-recent-searches": "^1.17.4",
-    "@astrojs/image": "^0.17.2",
-    "@astrojs/ts-plugin": "^1.1.1",
-    "astro": "^2.8.3",
+    "@algolia/autocomplete-js": "1.17.4",
+    "@algolia/autocomplete-plugin-recent-searches": "1.17.4",
+    "@astrojs/image": "0.17.2",
+    "@astrojs/ts-plugin": "1.1.1",
+    "astro": "2.8.3",
     "bootstrap": "4.0.0",
-    "create-stylelint": "^0.5.0",
-    "file-saver": "^2.0.5",
-    "image-size": "^1.1.1",
-    "jszip": "^3.10.1",
-    "localforage": "^1.10.0",
+    "create-stylelint": "0.5.0",
+    "file-saver": "2.0.5",
+    "image-size": "1.1.1",
+    "jszip": "3.10.1",
+    "localforage": "1.10.0",
     "toastify-js": "1.12.0",
     "ulid": "2.3.0",
-    "zod": "^3.21.4"
+    "zod": "3.21.4"
   },
   "devDependencies": {
-    "@types/file-saver": "^2.0.7",
-    "@types/node": "^20.4.5",
+    "@types/file-saver": "2.0.7",
+    "@types/node": "20.4.5",
     "@types/toastify-js": "1.12.3",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
-    "eslint": "^8.46.0",
-    "eslint-plugin-astro": "^0.27.2",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "postcss-html": "^1.7.0",
-    "prettier": "^3.0.1",
-    "prettier-plugin-astro": "^0.11.0",
-    "stylelint": "^16.8.2",
-    "stylelint-config-html": "^1.1.0",
-    "stylelint-config-standard": "^36.0.1"
+    "@typescript-eslint/eslint-plugin": "6.3.0",
+    "@typescript-eslint/parser": "6.3.0",
+    "eslint": "8.46.0",
+    "eslint-plugin-astro": "0.27.2",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "postcss-html": "1.7.0",
+    "prettier": "3.0.1",
+    "prettier-plugin-astro": "0.11.0",
+    "stylelint": "16.8.2",
+    "stylelint-config-html": "1.1.0",
+    "stylelint-config-standard": "36.0.1"
   }
 }
